--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
 spring.application.name=ludotheque
+spring.datasource.url=jdbc:postgresql://localhost:5432/LUDODB
+spring.datasource.username=userludodb
+spring.datasource.password=Pa$$w0rd
+
+spring.sql.init.mode=always
+spring.sql.init.schema-locations=classpath:scripts/schema.sql
+spring.sql.init.data-locations=classpath:scripts/data.sql
+
+# Niveau de log pour le logger racine
+logging.level.root=INFO
+
+# Définir le niveau de trace pour les loggers à surveiller
+logging.level.fr.eni.ludotheque.dal=DEBUG
