spring security ok

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,7 @@ logging.level.root=INFO
 
 # Définir le niveau de trace pour les loggers à surveiller
 logging.level.fr.eni.ludotheque.dal=DEBUG
+
+logging.level.org.springframework.security=DEBUG
+logging.level.org.thymeleaf=DEBUG
+
